--- a/view/admin/addtask.ejs
+++ b/view/admin/addtask.ejs
@@ -29,9 +29,9 @@
                 </div>
             </div>
             <div class="layui-inline">
-                <label class="layui-form-label">奖金</label>
+                <label class="layui-form-label">任务奖励</label>
                 <div class="layui-input-inline">
-                    <input type="number" name="finishBonus" required lay-verify="required" class="layui-input">
+                    <input type="text" name="finishBonus" required lay-verify="required" class="layui-input">
                 </div>
                 <div class="layui-form-mid layui-word-aux"></div>
             </div>
