--- a/view/admin/taskall.ejs
+++ b/view/admin/taskall.ejs
@@ -47,7 +47,7 @@
 
     table.on('tool(parse-table-demo)', function(obj){
       var data = obj.data;
-      console.log(data);
+      // console.log(data);
       if(obj.event === 'del'){
         layer.confirm('真的删除么', function(index){
           layui.$.ajax({
@@ -106,9 +106,9 @@
           }}
         // ,{field: 'published', title: '是否发布', width: 90, align: 'center'}
         // ,{field: 'publishHard', title: '难度', width: 64, sort: true, align: 'center'}
-        ,{field: 'finishBonus', title: '奖金(元)', width: 89, align: 'center', sort: true, templet: function (d) {
+        /*,{field: 'finishBonus', title: '奖励', width: 200, align: 'center', sort: true, templet: function (d) {
             return d.finishBonus || ''
-        }}
+        }}*/
         ,{float: 'right', width:180, toolbar: '#barDemo', align:'center'}
       ]]
     })
@@ -117,7 +117,7 @@
       url: '/admin/queryuserall',
       method: 'post',
       success: function (res) {
-        console.log(res.data);
+        // console.log(res.data);
         const data = { //数据
           list: res.data
         };
