--- a/view/details.ejs
+++ b/view/details.ejs
@@ -1,9 +1,9 @@
 <% include header.ejs %>
 
 <div class="layui-main" style="padding-top: 15px;">
-
-    <div id="view" style="padding-bottom: 100px;"></div>
-
+    <div id="layer-photos-demo" class="layer-photos-demo">
+        <div id="view" style="padding-bottom: 100px;"></div>
+    </div>
     <script id="details" type="text/html">
         <h1>{{ d.list.publishTitle }}</h1>
         <div class="layui-text layui-row" style="padding-top: 15px;">
